# fastapi-boilerplate-structure

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CODING_GUIDELINES.md  LANGCHAIN_LANGGRAPH.md  architecture.md
frontend/: README.md
infra/: docker-compose.yml
monitoring/: prometheus.yml
scripts/: check.sh
services/assistant-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/assistant-gateway/src/gateway/: main.py
services/assistant-gateway/src/gateway/agents/: graph.py  nodes.py  state.py  tools.py
services/assistant-gateway/src/gateway/api/v1/: chat.py  health.py  router.py
services/assistant-gateway/src/gateway/core/: auth.py  config.py  dependencies.py  errors.py  logging.py
services/assistant-gateway/src/gateway/router/: intent.py
services/assistant-gateway/tests/: conftest.py
services/assistant-gateway/tests/integration/: test_chat_api.py
services/assistant-gateway/tests/unit/: test_graph.py
services/data-analytics/: .env.example  Dockerfile  README.md  pyproject.toml
services/data-analytics/src/analytics/: main.py
services/data-analytics/src/analytics/api/v1/: health.py  nl2sql.py  router.py  schema.py
services/data-analytics/src/analytics/core/: auth.py  config.py  errors.py  logging.py
services/data-analytics/src/analytics/domain/: schemas.py
services/data-analytics/src/analytics/guards/: sql_safety.py
services/data-analytics/src/analytics/orchestration/: nl2sql.py
services/data-analytics/src/analytics/persistence/: database.py
services/data-analytics/src/analytics/persistence/alembic/: env.py
services/data-analytics/src/analytics/persistence/repositories/: __init__.py
services/data-analytics/src/analytics/rendering/: __init__.py
services/data-analytics/src/analytics/workers/: __init__.py
services/data-analytics/tests/: conftest.py
services/data-analytics/tests/integration/: test_analytics_api.py
services/data-analytics/tests/unit/: test_guards.py
services/knowledge-base/: .env.example  Dockerfile  README.md  pyproject.toml
services/knowledge-base/src/kb/: main.py
services/knowledge-base/src/kb/api/v1/: chat.py  documents.py  health.py  router.py  search.py
services/knowledge-base/src/kb/core/: auth.py  config.py  dependencies.py  logging.py
services/knowledge-base/src/kb/domain/: schemas.py
services/knowledge-base/src/kb/generation/: answer_generator.py
services/knowledge-base/src/kb/ingestion/: chunker.py  classifier.py  pipeline.py
services/knowledge-base/src/kb/ingestion/parsers/: docx.py  pdf.py  plain.py
services/knowledge-base/src/kb/persistence/: database.py  models.py
services/knowledge-base/src/kb/persistence/alembic/: env.py
services/knowledge-base/src/kb/persistence/alembic/versions/: 0001_initial.py
services/knowledge-base/src/kb/persistence/repositories/: chat.py  documents.py  search.py
services/knowledge-base/src/kb/retrieval/: citations.py  context_assembly.py  retriever.py
services/knowledge-base/src/kb/workers/: tasks.py
services/knowledge-base/tests/: conftest.py
services/knowledge-base/tests/integration/: test_documents_search_chat.py  test_health.py
services/knowledge-base/tests/unit/: test_chunker.py
services/report-generator/: .env.example  Dockerfile  README.md  pyproject.toml
services/report-generator/src/reports/: main.py
services/report-generator/src/reports/api/v1/: health.py  reports.py  router.py
services/report-generator/src/reports/core/: auth.py  config.py  dependencies.py  errors.py  logging.py
services/report-generator/src/reports/domain/: schemas.py
services/report-generator/src/reports/integrations/: __init__.py
services/report-generator/src/reports/orchestration/: pipeline.py
services/report-generator/src/reports/persistence/: database.py  models.py
services/report-generator/src/reports/persistence/alembic/: env.py
services/report-generator/src/reports/persistence/repositories/: reports.py
services/report-generator/src/reports/rendering/: __init__.py
services/report-generator/tests/: conftest.py
services/report-generator/tests/integration/: test_reports_api.py
services/report-generator/tests/unit/: test_pipeline.py
shared/contracts/: pyproject.toml
shared/contracts/src/contracts/: __init__.py  models.py
src/rag_api/: main.py
src/rag_api/api/v1/: health.py  rag.py  router.py
src/rag_api/core/: config.py  dependencies.py  logging.py  monitoring.py
src/rag_api/models/: health.py  rag.py
src/rag_api/rag/: chunking.py  embeddings.py  generator.py  retriever.py  vector_store.py
src/rag_api/services/: rag_service.py
tests/: conftest.py
tests/integration/: test_health.py  test_rag_api.py
tests/unit/: test_chunking.py
