[project]
name = "fastapi-rag-pipeline"
version = "0.1.0"
description = "Reusable FastAPI boilerplate for retrieval augmented generation applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.40.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_api"]

[tool.pytest.ini_options]
addopts = "-q --cov=rag_api --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
branch = true
source = ["rag_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true
