[project]
name = "assistant-gateway"
version = "0.1.0"
description = "Conversational routing gateway for the AI platform."
requires-python = ">=3.11"
dependencies = [
    "contracts",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.8.0",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.uv.sources]
contracts = { path = "../../shared/contracts", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
