[project]
name = "contracts"
version = "0.1.0"
description = "Shared Pydantic contracts for ai-platform services."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contracts"]
